--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -134,6 +134,11 @@ blockquote {
 </div>
 <script>
 $(document).ready(function() {
+   if (<%= @post.show_disclosure %>) {
+     $('.content_wrapper a')
+       .not("a[href*=theteenmagazine]")
+       .attr('rel','nofollow');
+   }
    $('.fb-share').click(function(e) {
        e.preventDefault();
        window.open($(this).attr('href'), 'fbShareWindow', 'height=450, width=550, top=' + ($(window).height() / 2 - 275) + ', left=' + ($(window).width() / 2 - 225) + ', toolbar=0, location=0, menubar=0, directories=0, scrollbars=0');
