--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,6 +14,9 @@
       <% end %>
       <p class="mb-0">Title</p>
       <%= f.text_field :title %>
+      <% if current_user.admin %>
+        <p class="mt-0">Turn off title formatting on save (admin only) <%= f.check_box :turn_off_caps %></p>
+      <% end %>
       <p class="mt-0">Write your article here and make sure you are saving often. Saving can also help fix formatting problems.</p>
       <%= f.text_area :content, class: "ckeditor" %>
       <% if @post.thumbnail.present? %>
