--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -13,9 +13,8 @@
     <p>As a writer for The Teen Magazine, you will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
       of journalists. We are so excited to welcome you to our talented team of writers, and we can't wait
       to work with you to create your first article!</p>
-    <p>Your next steps:</p>
+    <p>Your next step:</p>
     <ol>
-      <li>Join the Facebook group found <%= link_to "here","https://www.facebook.com/groups/615063885673363/" %> and write a short post introducing yourself. Check this group often as this is the number one way to connect with other writers from The Teen Magazine.</li>
       <li>Log into your new account <%= link_to "here", "https://www.theteenmagazine.com/login" %>. Your username is <b style="color: blue;"><%= @user.email %></b> and your temporary password is <b style="color: blue;"><%= @user.password %></b>. 
         The onboarding process will walk you through setting up your profile and starting your first article.</li>
     </ol>
