--- a/app/views/users/editor_onboarding/_pitching_new_articles.html.erb
+++ b/app/views/users/editor_onboarding/_pitching_new_articles.html.erb
@@ -5,9 +5,15 @@
       <p>Welcome</p>
     </span>
   </a>
-  <span class="progress_step">&#x25CB;<p>Pitching New Articles</p></span>
-  <span class="progress_step">&#x25CB;<p>Reviewing Pitches</p></span>
-  <span class="progress_step">&#x25CB;<p>Reviewing Articles</p></span>
+  <span class="progress_step">&#x25CB;
+    <p>Pitching New Articles</p>
+  </span>
+  <span class="progress_step">&#x25CB;
+    <p>Reviewing Pitches</p>
+  </span>
+  <span class="progress_step">&#x25CB;
+    <p>Reviewing Articles</p>
+  </span>
   <div class="hr">
     <hr />
     <hr />
