formatting and checking if commit is signed

--- a/app/views/users/editor_onboarding/_welcome.html.erb
+++ b/app/views/users/editor_onboarding/_welcome.html.erb
@@ -1,8 +1,16 @@
 <div class="stair_step">
-  <span class="progress_step">&#x25CB;<p>Welcome</p></span>
-  <span>&#x25CB;<p>Pitching New Articles</p></span>
-  <span>&#x25CB;<p>Reviewing Pitches</p></span>
-  <span>&#x25CB;<p>Reviewing Articles</p></span>
+  <span class="progress_step">&#x25CB;
+    <p>Welcome</p>
+  </span>
+  <span>&#x25CB;
+    <p>Pitching New Articles</p>
+  </span>
+  <span>&#x25CB;
+    <p>Reviewing Pitches</p>
+  </span>
+  <span>&#x25CB;
+    <p>Reviewing Articles</p>
+  </span>
   <div class="hr">
     <hr />
     <hr />
