--- a/app/views/welcome/partials/_trending.html.erb
+++ b/app/views/welcome/partials/_trending.html.erb
@@ -1,5 +1,6 @@
 <% @trending.each_with_index do |post, index| %>
   <div class="ctgry_article" style="margin-bottom: 10px;">
-    <h6 class="number"><%= index + 1 %>.</h6><h6 class="trending_title"><i><%=link_to(post.title.truncate_words(20), post )%></i> by <%= link_to(post.user.try(:full_name), post.user) %></h6>
+    <h6 class="number"><%= index + 1 %>.</h6>
+    <h6 class="trending_title"><i><%=link_to(post.title.truncate_words(20), post )%></i> by <%= link_to(post.user.try(:full_name), post.user) %></h6>
   </div>
 <% end %>
