--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -5,7 +5,8 @@
       <h1 class="pitch_ttl"><%= @title %></h1>
       <% if @desc %>
         <i>When you claim an article idea, the pitch will show up as claimed in your dashboard, and a new draft will be started. If you change your mind later, you can unclaim the pitch. Deadlines are given for most editor pitches and become active once you claim a pitch. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</i>
-        <br><br>
+        <br>
+        <br>
         <p style="display: inline;">Filter by category</p>
         <%= form_for @pitch, method: "get" do |f| %>
           <%= f.collection_select(:category_id, @categories, :id, :name, {include_blank: "All Pitches"}) %>
@@ -23,7 +24,7 @@
       <% @post = pitch.posts.find_by(user_id: pitch.claimed_id) %>
       <div class="card" style="width: 32%; <% if @unseen_pitches.to_a.include? pitch %>background-color: #E6F6FF;<% end %>">
         <a href="<%= pitch_path(pitch)%>">
-          <%=image_tag(pitch.thumbnail.url(:card), alt: pitch.title, :class => "card-img-top")%>
+          <% if pitch.thumbnail.attached? %><%= image_tag(pitch.thumbnail.variant(resize: "540x380"), alt: pitch.title, :class => "card-img-top")%><% end %>
         </a>
         <% if current_user.admin? || current_user.editor? %>
           <%= link_to("Edit", edit_pitch_path(pitch.id), :class => "edit_btn pitch_btn")%>
