--- a/app/views/users/dashboard/_public_writer_profile.html.erb
+++ b/app/views/users/dashboard/_public_writer_profile.html.erb
@@ -5,29 +5,29 @@
   </div>
 </div>
 <div class="category">
-   <div class="category--show">
-     <div class="other--articles">
-       <div class="flex">
-         <div class="container">
-           <% @user_posts_approved.each do |post| %>
-             <div class="thumbnail">
-               <div class="container--image">
-                 <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
-               </div>
-               <div class="thumbnail--container">
-                 <p class="date_post_preview"><%= post.category.name %></p>
-                 <h3 class="article_title"><%= link_to post.title, post %></h3>
-                 <p class="date_post_preview"><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
-               </div>
-             </div>
-           <% end %>
-         </div>
-         <a class="apply" href="/apply" target="blank">
-         </a>
-       </div>
-     </div>
-     <div class="mb-3 mt-3">
-       <%== pagy_nav(@pagy).html_safe %>
-     </div>
-   </div>
+  <div class="category--show">
+    <div class="other--articles">
+      <div class="flex">
+        <div class="container">
+          <% @user_posts_approved.each do |post| %>
+            <div class="thumbnail">
+              <div class="container--image">
+                <%=link_to(image_tag(post.thumbnail.variant(resize: "540x340"), :class => "image_thumbnail"), post )%>
+              </div>
+              <div class="thumbnail--container">
+                <p class="date_post_preview"><%= post.category.name %></p>
+                <h3 class="article_title"><%= link_to post.title, post %></h3>
+                <p class="date_post_preview"><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
+              </div>
+            </div>
+          <% end %>
+        </div>
+        <a class="apply" href="/apply" target="blank">
+        </a>
+      </div>
+    </div>
+    <div class="mb-3 mt-3">
+      <%== pagy_nav(@pagy).html_safe %>
+    </div>
+  </div>
 </div>
