--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -1,7 +1,7 @@
 <style lazyload>
   @media(min-width: 800px) {
     .post_image {
-      background-image: url(<%= url_for(@post.thumbnail.variant(resize: "560x280")) %>);
+      background-image: url(<%= url_for(@post.thumbnail.variant(resize_to_fill: [64, 64]) %>);
     }
   }
   @media(max-width: 800px) {
