added all models to image_processed

--- a/app/views/badges/_new_badge_modal.html.erb
+++ b/app/views/badges/_new_badge_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="newBadgeModal" tabindex="-1" role="dialog" aria-labelledby="newBadgeModal"
+<div class="modal fade" id="newBadgeModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="newBadgeModal"
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document" style="width: 800px; max-width: 95%;">
     <div class="modal-content">
@@ -17,7 +17,7 @@
       </div>
       <div class="comment_form_wrapper mt-0 pl-4 pr-4">
         <div class="btn_cntnr mb-4 mt-4 pb-0">
-          <a href="#" class="newpost--new--profile mr-2 pl-5 pr-5" aria-hidden="true" data-dismiss="modal" aria-label="Close">Close</a>
+          <a href="#" class="newpost--new--profile mr-2 pl-5 pr-5" aria-hidden="true" data-bs-dismiss="modal" aria-label="Close">Close</a>
         </div>
       </div>
     </div>
