--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -70,7 +70,7 @@
     </div>
     <!-- Grid row -->
     <div class="py-3">
-      <span><i>© 2020 TheTeenMagazine.com</i></span>
+      <span><i>© <%= Time.now.year %> TheTeenMagazine.com</i></span>
     </div>
   </div>
   <!-- Footer Links -->
