--- a/app/views/users/dashboard/tabs/articles/_preview_post_confirmation.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_preview_post_confirmation.html.erb
@@ -54,6 +54,6 @@
 </div>
 <div class="rounded-bottom lighten-3 text-right">
   <div class="btn_cntnr mb-0">
-    <%= button_tag "Close", class: "m-0 newpost--new--profile", "data-dismiss" => "modal" %>
+    <%= button_tag "Close", class: "m-0 newpost--new--profile", "data-bs-dismiss" => "modal" %>
   </div>
 </div>
