--- a/app/views/application_mailer/invitation_to_apply.html.erb
+++ b/app/views/application_mailer/invitation_to_apply.html.erb
@@ -423,8 +423,8 @@
 
                         <div style="text-align: center; padding: 40px 20px;">
                           <div class="position-relative" style="width: 120px; margin: 0 auto;">
-                            <% if @user.try(:profile)&.exists? %>
-                              <img src="http:<%= @user.profile.url(:square) %>" class="profile_img" alt="<%= @user.profile.url(:square) %>" >
+                            <% if @user.profile.attached? %>
+                              <img src="http:<%= @user.profile.variant(resize_to_fill: [100,100], format: 'webp').processed %>" class="profile_img" alt="<%= @user.profile.variant(resize_to_fill: [100,100]) %>" >
                             <% else %>
                               <%= image_tag("https://www.theteenmagazine.com/assets/profile_image-d8facbb469f1bc2077639f9d92f2c56bbf1b5c7e144045d67a2aa0f80364ba41.jpg", :class => "profile_img") %>
                             <% end %>
@@ -762,7 +762,7 @@
                     <td valign="top" class="mcnTextContent" style="padding-top: 0;color: white !important; padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #FFFFFF;font-family: Helvetica;font-size: 12px;line-height: 150%;text-align: center;">
 
 <br>
-Copyright © 2020 The Teen Magazine, All rights reserved.<br>
+Copyright © <%= Time.now.year %> The Teen Magazine, All rights reserved.<br>
 You are receiving this email because you were added to <%= @user.first_name %>'s invite list.
 <br>
 <br>
