--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div class="category">
-  <div class="category_image" style="background-image: url(<%= @category.image %>)">
+  <div class="category_image" style="background-image: url(<%= url_for(@category.image) %>)">
     <div id="background">
       <h1><%= @category.name %></h1>
     </div>
@@ -11,7 +11,7 @@
           <% @category_posts.each_with_index do |post, index| %>
             <div class="thumbnail">
               <div class="container--image">
-                <%=link_to(image_tag(post.thumbnail.variant(resize: "540x340"), :class => "image_thumbnail"), post )%>
+                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540,340], format: "webp").processed, :class => "image_thumbnail"), post )%>
               </div>
               <div class="thumbnail--container">
                 <p class="date_post_preview"><%= post.category.name %></p>
