--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -8,8 +8,8 @@
   </div>
   <div class="flex--profile profile-minimal mt-4">
     <div class="position-relative" style="width: 120px; margin: 0 auto;">
-      <% if @user.try(:profile)&.exists? %>
-        <%= image_tag(@user.profile.url(:square), :class => "profile_img") %>
+      <% if @user.profile.attached? %>
+        <%= image_tag(@user.profile.variant(resize_to_fill: [100,100]), :class => "profile_img") %>
       <% else %>
         <%= image_tag("profile_image.jpg", :class => "profile_img") %>
       <% end %>
