--- a/app/views/layouts/partials/_header-writer-mobile.html.erb
+++ b/app/views/layouts/partials/_header-writer-mobile.html.erb
@@ -11,7 +11,7 @@
             <%= link_to "Pitch an Article", new_pitch_path, class: "pt-4" %>
          <% end %>
          <div class="dropdown">
-           <% @profile_img = current_user.profile.exists? ? image_tag(current_user.profile.url(:square)) : image_tag("profile_image.jpg") %>
+           <% @profile_img = current_user.profile.attached? ? image_tag(current_user.profile.variant(resize_to_fill: [100,100])) : image_tag("profile_image.jpg") %>
             <a class="mr-0 btn-floating btn-sm btn-block pt-0 dropdown-toggle btn-profile" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-dropdown-animation="off">
               <span
                 id="dropdown-btn-content-wrapper"
