--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -1,5 +1,5 @@
 <div class="category">
-  <div class="category_image" style="background-image: url(<%= @trending.first.thumbnail.url(:original) %>)">
+  <div class="category_image" style="background-image: url(<%= url_for(@trending.first.thumbnail) %>)">
     <div id="background">
       <h1>Trending Articles</h1>
     </div>
@@ -11,7 +11,7 @@
           <% @trending.each do |post| %>
             <div class="thumbnail">
               <div class="container--image">
-                <%=link_to(image_tag(post.thumbnail.variant(resize: "540x340"), :class => "image_thumbnail"), post )%>
+                <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [540, 340], format: "webp").processed, :class => "image_thumbnail"), post )%>
               </div>
               <div class="thumbnail--container">
                 <h3 class="article_title">
