--- a/app/views/pitches/_preview_pitch.html.erb
+++ b/app/views/pitches/_preview_pitch.html.erb
@@ -28,7 +28,7 @@
             <% end %>
           </div>
           <div class="flex_child">
-            <%= image_tag(pitch.thumbnail.url(:card), class: "image_half_left mb-4") %>
+            <%= image_tag(pitch.thumbnail.variant(resize_to_fill: [540, 380]), class: "image_half_left mb-4") %>
           </div>
         </div>
         <div class="btn_cntnr mb-0 pb-0">
@@ -38,7 +38,7 @@
               <%= f.hidden_field :content, value: "<i>" << pitch.description << " (delete pitch description before submitting)</i>" %>
               <%= f.hidden_field :category_id, value: pitch.category_id %>
               <%= f.hidden_field :pitch_id, value: pitch.id %>
-              <%= f.button "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-dismiss" => "modal" %>
+              <%= f.button "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-bs-dismiss" => "modal" %>
               <div class="hide spinner-button spinner-border" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
@@ -48,7 +48,7 @@
             <%= form_for pitch, url: pitch_onboarding_unclaim_path(:id => pitch.id), remote: true do |f| %>
               <%= f.hidden_field :claimed_id, value: nil %>
               <%= f.hidden_field :archive, value: !pitch.user.editor %>
-              <%= f.button "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-dismiss" => "modal" %>
+              <%= f.button "Cancel", class: "newpost--new--profile mr-2 pl-5 pr-5", id: "dismiss-modal", "data-bs-dismiss" => "modal" %>
               <div class="hide spinner-button spinner-border" style="margin-left: 78px !important;" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
