--- a/app/views/posts/partials/promoted/_promoted_page.html.erb
+++ b/app/views/posts/partials/promoted/_promoted_page.html.erb
@@ -1,6 +1,6 @@
 <% @posts_promoted.each do |post| %>
   <div class="ctgry_article recent mb-4">
-    <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title, class: "image_recent_articles"), post )%>
+    <%=link_to(image_tag(post.thumbnail.variant(resize_to_fill: [560,280], format: "webp").processed, alt: post.title, class: "image_recent_articles"), post )%>
     <h1 class="mb-1"><%= link_to post.title, post %></h1>
     <% if post.promoting_until && post.promoting_until > Time.now %>
       <span class="badge bg-primary">Promoted</span>
