--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -6,11 +6,11 @@
         <div class="classic-tabs">
           <ul class="nav mt-0" id="myClassicTab" role="tablist" style="padding-top: 15px;">
             <li class="nav-item tab-custom">
-              <a class="tab-custom active show" id="home-tab-classic" data-toggle="tab" href="#profile-classic"
+              <a class="tab-custom active show" id="home-tab-classic" data-bs-toggle="tab" href="#profile-classic"
                 role="tab" aria-controls="profile-classic" aria-selected="true">Home</a>
             </li>
             <li class="nav-item tab-custom">
-              <a class="tab-custom" id="activity-tab-classic" data-toggle="tab" href="#follow-classic" role="tab"
+              <a class="tab-custom" id="activity-tab-classic" data-bs-toggle="tab" href="#follow-classic" role="tab"
                 aria-controls="follow-classic" aria-selected="false">All Activity</a>
             </li>
           </ul>
@@ -23,7 +23,7 @@
             <% @editors_reviews.each do |draft| %>
               <div class="flex--postlist--item review_items pl-0">
                 <div class="inside--item">
-                  <%= link_to (image_tag draft.thumbnail(:medium)), post_path(draft) %>
+                  <%= link_to (image_tag draft.thumbnail.variant(resize_to_fill: [150,100], format: 'webp').processed), post_path(draft) %>
                   <div>
                     <h4><%= link_to draft.title, post_path(draft), class: "link_nrml"%></h4>
                     <p class="edited_dt"><%= "You've been editing this article for " + time_ago_in_words(draft.reviews.last.editor_claimed_review_at) unless draft.reviews.last.editor_claimed_review_at.blank? %></p>
@@ -44,8 +44,8 @@
                 <% @submitted_for_review.each do |draft| %>
                   <div class="card card-review <% if @unseen_posts.include? draft %> unread <% end %>" style="width: 100%;">
                     <div class="card-bottom-flex p-2">
-                      <% if draft.user.try(:profile)&.exists? %>
-                        <%= image_tag draft.user.profile.url(:square), :class => "profile_img", :id => "review_img" %>
+                      <% if draft.user.profile.attached? %>
+                        <%= image_tag draft.user.profile.variant(resize_to_fill: [100,100], format: 'webp').processed, :class => "profile_img", :id => "review_img" %>
                       <% else %>
                         <%= image_tag "profile_image.jpg", :class => "profile_img", :id => "review_img" %>
                       <% end %>
@@ -84,8 +84,8 @@
               <% @submitted_pitches.each do |pitch| %>
               <div class="card card-review <% if @unseen_submitted_pitches.include? pitch %> unread <% end %>" style="width: 100%;">
                   <div class="card-bottom-flex p-2">
-                    <% if pitch.user.try(:profile)&.exists? %>
-                      <%= image_tag pitch.user.profile.url(:square), :class => "profile_img", :id => "review_img" %>
+                    <% if pitch.user.profile.attached? %>
+                      <%= image_tag pitch.user.profile.variant(resize_to_fill: [100, 100], format: 'webp').processed, :class => "profile_img", :id => "review_img" %>
                     <% else %>
                       <%= image_tag "profile_image.jpg", :class => "profile_img", :id => "review_img" %>
                     <% end %>
@@ -147,8 +147,8 @@
                          a 40 40 0 0 1 0 -80">
                 </path>
               </svg>
-              <% if @user.try(:profile)&.exists? %>
-                <%= image_tag(@user.profile.url(:square), :class => "progress_editor_profile profile_img") %><span class="badge badge-default editor_label">Editor</span>
+              <% if @user.profile.attached? %>
+                <%= image_tag(@user.profile.variant(resize_to_fill: [100,100], format: 'webp').processed, :class => "progress_editor_profile profile_img") %><span class="badge badge-default editor_label">Editor</span>
               <% else %>
                 <%= image_tag("profile_image.jpg", :class => "progress_editor_profile profile_img") %><span class="badge badge-default editor_label">Editor</span>
               <% end %>
@@ -168,13 +168,13 @@
               <div class="list-group-item">
                 <p class="mb-0 pt-3 pb-3 <% if @editor_reviews_cnt >= @reviews_requirement %>strikethrough<% end %>">
                   <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="glasses" class="white-text svg-inline--fa fa-glasses fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M574.1 280.37L528.75 98.66c-5.91-23.7-21.59-44.05-43-55.81-21.44-11.73-46.97-14.11-70.19-6.33l-15.25 5.08c-8.39 2.79-12.92 11.86-10.12 20.24l5.06 15.18c2.79 8.38 11.85 12.91 20.23 10.12l13.18-4.39c10.87-3.62 23-3.57 33.16 1.73 10.29 5.37 17.57 14.56 20.37 25.82l38.46 153.82c-22.19-6.81-49.79-12.46-81.2-12.46-34.77 0-73.98 7.02-114.85 26.74h-73.18c-40.87-19.74-80.08-26.75-114.86-26.75-31.42 0-59.02 5.65-81.21 12.46l38.46-153.83c2.79-11.25 10.09-20.45 20.38-25.81 10.16-5.3 22.28-5.35 33.15-1.73l13.17 4.39c8.38 2.79 17.44-1.74 20.23-10.12l5.06-15.18c2.8-8.38-1.73-17.45-10.12-20.24l-15.25-5.08c-23.22-7.78-48.75-5.41-70.19 6.33-21.41 11.77-37.09 32.11-43 55.8L1.9 280.37A64.218 64.218 0 0 0 0 295.86v70.25C0 429.01 51.58 480 115.2 480h37.12c60.28 0 110.37-45.94 114.88-105.37l2.93-38.63h35.75l2.93 38.63C313.31 434.06 363.4 480 423.68 480h37.12c63.62 0 115.2-50.99 115.2-113.88v-70.25c0-5.23-.64-10.43-1.9-15.5zm-370.72 89.42c-1.97 25.91-24.4 46.21-51.06 46.21H115.2C86.97 416 64 393.62 64 366.11v-37.54c18.12-6.49 43.42-12.92 72.58-12.92 23.86 0 47.26 4.33 69.93 12.92l-3.13 41.22zM512 366.12c0 27.51-22.97 49.88-51.2 49.88h-37.12c-26.67 0-49.1-20.3-51.06-46.21l-3.13-41.22c22.67-8.59 46.08-12.92 69.95-12.92 29.12 0 54.43 6.44 72.55 12.93v37.54z"></path></svg></span>
-                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_reviews_cnt %>/<%= @reviews_requirement %> Reviews</a> completed
+                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_reviews_cnt %>/<%= @reviews_requirement %> Reviews completed</a>
                 </p>
               </div>
               <div class="list-group-item" style="border-top: none !important;">
                 <p class="mb-0 pt-3 pb-3 <% if @editor_pitches_cnt >= @pitches_requirement %>strikethrough<% end %>">
                   <span class="rounded-circle mr-4 grey pt-4 pb-4 pl-3 pr-3"><svg width="30px" height="30px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lightbulb" class="white-text svg-inline--fa fa-lightbulb fa-w-11" role="img" viewBox="0 0 352 512"><path fill="currentColor" d="M96.06 454.35c.01 6.29 1.87 12.45 5.36 17.69l17.09 25.69a31.99 31.99 0 0 0 26.64 14.28h61.71a31.99 31.99 0 0 0 26.64-14.28l17.09-25.69a31.989 31.989 0 0 0 5.36-17.69l.04-38.35H96.01l.05 38.35zM0 176c0 44.37 16.45 84.85 43.56 115.78 16.52 18.85 42.36 58.23 52.21 91.45.04.26.07.52.11.78h160.24c.04-.26.07-.51.11-.78 9.85-33.22 35.69-72.6 52.21-91.45C335.55 260.85 352 220.37 352 176 352 78.61 272.91-.3 175.45 0 73.44.31 0 82.97 0 176zm176-80c-44.11 0-80 35.89-80 80 0 8.84-7.16 16-16 16s-16-7.16-16-16c0-61.76 50.24-112 112-112 8.84 0 16 7.16 16 16s-7.16 16-16 16z"></path></svg></span>
-                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_pitches_cnt %>/<%= @pitches_requirement %> Pitches</a> completed</p>
+                  <a href="#" class="link_grn" data-toggle="tooltip" title="Due <%= Date.today.end_of_month.in_time_zone.strftime("%B %d") %>"><%= @editor_pitches_cnt %>/<%= @pitches_requirement %> Pitches completed</a></p>
               </div>
             </div>
           </div>
