--- a/app/views/users/_profile_minimal.html.erb
+++ b/app/views/users/_profile_minimal.html.erb
@@ -1,7 +1,7 @@
 <div class="flex--profile profile-minimal">
   <div class="position-relative" style="width: 120px; margin: 0 auto;">
-    <% if user.try(:profile)&.exists? %>
-      <%= image_tag(user.profile.url(:square), :class => "profile_img") %><% if user.try(:editor) %><span class="badge badge-default editor_label" style="top: 5px;">Editor</span><% end %>
+    <% if user.profile.attached? %>
+      <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp').processed, :class => "profile_img") %><% if user.try(:editor) %><span class="badge badge-default editor_label" style="top: 5px;">Editor</span><% end %>
     <% else %>
       <%= image_tag("profile_image.jpg", :class => "profile_img") %><% if user.try(:editor) %><span class="badge badge-default editor_label" style="top: 5px;">Editor</span><% end %>
     <% end %>
