--- a/app/views/application_mailer/welcome_email.html.erb
+++ b/app/views/application_mailer/welcome_email.html.erb
@@ -13,10 +13,10 @@
     <p>As a writer for The Teen Magazine, you will receive feedback on submitted articles, build your journalism resume, and network with our amazing community
       of journalists. We are so excited to welcome you to our talented team of writers, and we can't wait
       to work with you to create your first article!</p>
-    <p>Your next step:</p>
+    <p>Your next steps:</p>
     <ol>
-      <li>Log into your new account <%= link_to "here", "https://www.theteenmagazine.com/login" %>. Your username is <b style="color: blue;"><%= @user.email %></b> and your temporary password is <b style="color: blue;"><%= @user.password %></b>. 
-        The onboarding process will walk you through setting up your profile and starting your first article.</li>
+      <li>Log into your new account <%= link_to "here", "https://www.theteenmagazine.com/login" %>. Your username is <b style="color: blue;"><%= @user.email %></b> and your temporary password is <b style="color: blue;"><%= @user.password %></b>.</li>
+      <li>Complete the onborading process. It will walk you through setting up your profile and starting your first article.</li> 
     </ol>
     <p>We look forward to reading your first submission and welcoming you to our writer community! If you have any questions, please reply to this email or reach out to me directly at mia@theteenmagazine.com at any time.</p>
     <p>Best Regards,<br>Mia Johansson</p><p>The Teen Magazine</p>
