undid active storage changes to frontend

--- a/app/views/application_mailer/weekly_newsletter.html.erb
+++ b/app/views/application_mailer/weekly_newsletter.html.erb
@@ -190,7 +190,7 @@
                                   class="container590">
                                   <tr>
                                       <td align="center" style="padding-left: 20px;">
-                                          <a href="https://www.theteenmagazine.com/<%= post.slug %>" style=" border-style: none !important; border: 0 !important;"><img src="http:<%= post.thumbnail.variant(resize: "540x340") %>" style="display: block; width: 280px;" width="280" border="0" alt="" /></a>
+                                          <a href="https://www.theteenmagazine.com/<%= post.slug %>" style=" border-style: none !important; border: 0 !important;"><img src="http:<%= post.thumbnail.url(:large2) %>" style="display: block; width: 280px;" width="280" border="0" alt="" /></a>
                                       </td>
                                   </tr>
                               </table>
