--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -6,7 +6,7 @@
   }
   @media(max-width: 800px) {
     .post_image {
-      background-image: url(<%= @post.thumbnail.variant(resize: "540x340") %>);
+      background-image: url(<%= @post.thumbnail.url(:large2) %>);
     }
   }
   blockquote {
