--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,7 +11,7 @@
           <% @category_posts.each_with_index do |post, index| %>
             <div class="thumbnail">
               <div class="container--image">
-                <%=link_to(image_tag(post.thumbnail.variant(resize: "540x340"), :class => "image_thumbnail"), post )%>
+                <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
               </div>
               <div class="thumbnail--container">
                 <p class="date_post_preview"><%= post.category.name %></p>
