--- a/app/views/pitches/index.html.erb
+++ b/app/views/pitches/index.html.erb
@@ -24,7 +24,7 @@
       <% @post = pitch.posts.find_by(user_id: pitch.claimed_id) %>
       <div class="card" style="width: 32%; <% if @unseen_pitches.to_a.include? pitch %>background-color: #E6F6FF;<% end %>">
         <a href="<%= pitch_path(pitch)%>">
-          <% if pitch.thumbnail.attached? %><%= image_tag(pitch.thumbnail.variant(resize: "540x380"), alt: pitch.title, :class => "card-img-top")%><% end %>
+          <% if pitch.thumbnail.attached? %><%= image_tag(pitch.thumbnail.url(:card), alt: pitch.title, :class => "card-img-top")%><% end %>
         </a>
         <% if current_user.admin? || current_user.editor? %>
           <%= link_to("Edit", edit_pitch_path(pitch.id), :class => "edit_btn pitch_btn")%>
