--- a/app/views/users/dashboard/tabs/articles/_published_articles_page.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_published_articles_page.html.erb
@@ -2,7 +2,7 @@
   <%= link_to post_modal_path(:id => @user.id, :post_id => post.id), method: :patch, remote: true, class: "card", style: "width: 32%;", id: "post-#{post.id}" do %>
     <svg style="color: #F0255E;" width="22px" height="22px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check-circle" class="abs-right-corner hide mb-1 svg-inline--fa fa-check-circle fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
     <div class="p-0">
-      <%=image_tag(post.thumbnail.variant(resize: "540x340"), alt: post.title, :class => "card-img-top")%>
+      <%=image_tag(post.thumbnail.url(:large2), alt: post.title, :class => "card-img-top")%>
       <div class="card-body">
         <h4 style="color: black;" class="pitch_ttl mt-0"><%= post.title %></h4>
         <p class="card-text">
